# discord_playlistbot

./: .gitignore  LICENSE  README.md  env_template.txt  pyproject.toml  start.py
docs/: DEVELOPMENT.md  PROJECT_OVERVIEW.md  SOUNDCLOUD_API.md
src/: commands.py  config.py  database.py  main.py  music_services.py  soundcloud_service.py  url_extractor.py
